--- a/style.css
+++ b/style.css
@@ -1,53 +1,251 @@
-header{
-  background-color: white;
-  width: 90%;
-  height: 80px;
-  border-bottom-width: 5px;
-  border-bottom: solid black;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  }
-
-body {
-  margin-top: 100px;
+h1 {
+  font-family: 'Yellowtail', cursive;
+  font-size: 35px;
 }
 
 
-h1{
-  font-size: 15px;
-  float:left;
+a {
+  color: black;
 }
 
-body {
-  margin-top: 100px;
+/*******************************
+          App Styles
+********************************/
+
+/* HEADER */
+
+header {
+  width: 960px;
+  height: 45px;
+  position: relative;
+  margin: 30px auto;
 }
 
-
-h1{
-  font-size: 15px;
-  float:left;
+header div > img {
+  width: 45px;
+  height: 45px;
+  float: left;
+  padding-right: 10px;
 }
-h3{
-  font-size:10px;
-  float:left;
 
-}
-h4{
+header section {
+  width: 200px;
+  height: 45px;
+  float: left;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size: 10px;
 }
-h5{
-  margin-top: 0px;
-  font-size:20px;
-}
-h6{
-  font-size:9px;
-  margin-top: 0px;
+
+nav {
+  height: 45px;
 }
 
-footer{
-  position: fixed;
-  border-top-width: 5px;
-  border-bottom-style: double;
+nav ul li {
+  width: 24px;
+  height: 24px;
+  float: right;
+  margin-top: 11px;
+  margin-right: 1px;
+}
 
+nav ul li:nth-child(3) {
+  margin-right: 9px;
+}
+
+/* MAIN */
+
+.lg-style-bar {
+  width: 960px;
+  margin: 30px auto;
+}
+
+.lg-style-bar img {
+  width: 960px;
+  height: 13px;
+  background-repeat:repeat-x;
+}
+
+main {
+  width: 960px;
+  margin: 0px auto;
+}
+
+main h2 {
+  font-family: 'Oswald', sans-serif;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+#main-sub-heading {
+  height: 12px;
+  margin-top: 5px;
+  margin-bottom: 30px;
+  color: #C8C8C8;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 12px;
+}
+
+#main-sub-heading a {
+  color: #C8C8C8;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.right a {
+  color: #black;
+  text-decoration: none;
+}
+
+#banner-img {
+  width: 960px;
+}
+
+/* Directions */
+
+#directions {
+  margin: 30px 0px;
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 20px;
+  font-weight: lighter;
+  color: #867970;
+}
+
+/* Ingredients List */
+
+#ingredients-main {
+  position: relative;
+  width: 960px;
+  height: 330px;
+}
+
+.ingredients-bg-pic {
+  position: absolute;
+  width: 960px;
+}
+
+#ingredients-checklist {
+  width: 960px;
+  height: 305px;
+  position: absolute;
+  padding: 0;
+  margin: 0 auto;
+  font-family: 'Delius', cursive;
+  font-size: 20px;
+  color: #867970;
+}
+
+#ingredients-checklist fieldset {
+  padding: 5px 15px;
+}
+
+#ingredients-checklist input {
+  float: left;
+  margin-right: 10px;
+}
+
+.left-checklist {
+  float: left;
+  margin: 50px 50px;
+}
+
+.right-checklist {
+  float: right;
+  margin: 50px 50px;
+}
+
+
+/* PROFILE */
+
+.profile {
+  width: 960px;
+  height: 180px;
+}
+
+.profile .bio {
+  position: relative;
+  width: 682px;
+  height: 93px;
+  float: left;
+}
+
+.profile img {
+  width: 73px;
+  height: 70px;
+  float: left;
+  margin-right: 20px;
+  border-radius: 50%;
+}
+
+.profile h3 {
+  font-family: 'Cormorant Garamond', serif;
+  font-weight: bold;
+  font-size: 22px;
+  color: #867970;;
+}
+
+.profile span {
+  display: inline-block;
+  margin-top: 5px;
+  font-family: 'Cormorant Garamond', serif;
+  font-weight: '300';
+  font-size: 20px;
+  color: #867970;
+}
+
+.bio-btn {
+  width: 185px;
+  height: 70px;
+  position: relative;
+  float: right;
+}
+
+.bio-btn button {
+  width: 185px;
+  height: 54px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  border-radius: 3px;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 200;
+  font-size: 18px;
+  color: white;
+  background: #C06F5E;
+}
+
+/* footer */
+
+footer {
+  width: 960px;
+  height: 120px;
+}
+
+footer img {
+  margin-top: 3px;
+  margin-left: 5px;
+  float: left;
+}
+
+.sm-style-bar {
+  width: 460px;
+  height: 1px;
+  margin: 17px auto;
+  background: #D0D0D0;
+}
+
+footer section {
+  text-align: center;
+  margin-top: 30px;
+  color: #D0D0D0;
+}
+
+.clearfix {
+  clear: both;
 }
