--- a/style.css
+++ b/style.css
@@ -8,9 +8,6 @@ a {
   color: black;
 }
 
-/*******************************
-          App Styles
-********************************/
 
 /* HEADER */
 
@@ -52,7 +49,7 @@ nav ul li:nth-child(3) {
   margin-right: 9px;
 }
 
-/* MAIN */
+/*Main body styles*/
 
 .lg-style-bar {
   width: 960px;
@@ -114,9 +111,10 @@ main h2 {
   font-size: 20px;
   font-weight: lighter;
   color: #867970;
+  text-indent: 50px
 }
 
-/* Ingredients List */
+/* Recipe card */
 
 #ingredients-main {
   position: relative;
@@ -160,7 +158,7 @@ main h2 {
 }
 
 
-/* PROFILE */
+/*  */
 
 .profile {
   width: 960px;
